@@ -7,10 +7,12 @@ apply from: rootProject.file('gradle/java-setup.gradle')
 
 dependencies {
 	api project(':lib')
+	api files(project(':lib').sourceSets.sortPom.output.classesDirs)
 	api "com.diffplug.durian:durian-core:${VER_DURIAN}"
 	api "com.diffplug.durian:durian-testlib:${VER_DURIAN}"
-	api "junit:junit:${VER_JUNIT}"
+	api "org.junit.jupiter:junit-jupiter:${VER_JUNIT}"
 	api "org.assertj:assertj-core:${VER_ASSERTJ}"
+	api "org.mockito:mockito-core:$VER_MOCKITO"
 
 	implementation "com.diffplug.durian:durian-io:${VER_DURIAN}"
 	implementation "com.diffplug.durian:durian-collect:${VER_DURIAN}"
@@ -21,8 +23,18 @@ dependencies {
 spotbugs { reportLevel = 'high' } // low|medium|high (low = sensitive to even minor mistakes)
 
 apply from: rootProject.file('gradle/special-tests.gradle')
+tasks.withType(Test).configureEach {
+	if (JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_16)) {
+		// for Antlr4FormatterStepTest and KtLintStepTest
+		def args = [
+			'--add-opens=java.base/java.lang=ALL-UNNAMED'
+		]
+		jvmArgs args
+	}
+}
 
 javadoc {
 	options.addStringOption('Xdoclint:none', '-quiet')
 	options.addStringOption('Xwerror', '-quiet')
 }
+
